# bras_collection

./: CMakeLists.txt  main.cpp
config/: collector.json
include/: common.h
scripts/: start_collector.sh
src/core/: dpdk_engine.cpp  dpdk_engine.h  flow_dispatcher.cpp  flow_dispatcher.h  hw_flow_steering.cpp  hw_flow_steering.h  ring_pool.h
src/output/: dcs_writer.cpp  dcs_writer.h  http_dcs_serializer.cpp  http_dcs_serializer.h  onu_dcs_serializer.cpp  onu_dcs_serializer.h  ping_dcs_serializer.cpp  ping_dcs_serializer.h  radius_dcs_serializer.cpp  radius_dcs_serializer.h  raw_file_manager.cpp  raw_file_manager.h  stb_dcs_serializer.cpp  stb_dcs_serializer.h  tcp_dcs_serializer.cpp  tcp_dcs_serializer.h
src/parser/: cpe_detector.cpp  cpe_detector.h  dns_parser.cpp  dns_parser.h  ndpi_analyzer.cpp  ndpi_analyzer.h  onu_parser.cpp  onu_parser.h  pppoe_parser.cpp  pppoe_parser.h  radius_parser.cpp  radius_parser.h  stb_detector.cpp  stb_detector.h
src/record/: http_record.h  onu_record.h  ping_record.h  record_types.h  stb_record.h
src/session/: flow_table.cpp  flow_table.h  http_session.cpp  http_session.h  radius_session_manager.cpp  radius_session_manager.h  radius_session_table.h  tcp_session.h  udp_session.cpp  udp_session.h
src/threads/: monitor_thread.cpp  monitor_thread.h  output_thread.cpp  output_thread.h  radius_thread.cpp  radius_thread.h  rx_thread.cpp  rx_thread.h  signal_queues.h  worker_thread.cpp  worker_thread.h
src/utils/: config.cpp  config.h  lock_free_queue.h  logger.cpp  logger.h  stats.cpp  stats.h  time_utils.h
